修改信息和密码完成

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -34,3 +34,10 @@ body,html{
     width: 35px;
     height: 35px;
 }
+iframe{
+    width: 100%;
+    height: 100%;
+}
+.layui-body{
+ overflow: hidden;   
+}
